tests/ui/type-error.stderr
error[E0308]: mismatched types
 --> $DIR/type-error.rs:7:18
  |
7 |     let a: i32 = "a"; //~ ERROR mismatched types
  |            ---   ^^^ expected `i32`, found `&str`
  |            |
  |            expected due to this
